--- a/quemsomos.html
+++ b/quemsomos.html
@@ -23,7 +23,7 @@
         <p class="titu" style="text-align: center; color: #ED6335; font-size: 35px; padding-top: 40px;">QUEM SÃO OS RESPONSÁVEIS PELO CALOUROS IF?</p>
 
         <div class="grid">
-            <div class="item">
+            <div class="item1">
                 <img src="img/iconalicia.png" class="i1">
                 <p class="j1">
                     Alicia
@@ -32,7 +32,7 @@
                     Integrante do Meninas na Ciência - IFB
                 </p>
             </div>
-            <div class="item">
+            <div class="item2">
                 <img src="img/iconestevao.png" class="i2">
                 <p class="j2">
                     Estêvão
@@ -40,7 +40,7 @@
                     em Informática do IFB - Campus Brasília
                 </p>
             </div>
-            <div class="item">
+            <div class="item3">
                 <img src="img/iconmaria.png" class="i3">
                 <p class="j3">
                     Maria Vitória
@@ -49,7 +49,7 @@
                     Integrante do Meninas na Ciência - IFB
                 </p>
             </div>
-            <div class="item">
+            <div class="item4">
                 <img src="img/iconernesto.png" class="i4">
                 <p class="j4">
                     Ernesto
@@ -57,7 +57,7 @@
                     em Informática do IFB - Campus Brasília
                 </p>
             </div>
-            <div class="item">
+            <div class="item5">
                 <img src="img/iconjose.png" class="i5">
                 <p class="j5">
                     José
@@ -65,7 +65,7 @@
                     em Informática do IFB - Campus Brasília
                 </p>
             </div>
-            <div class="item">
+            <div class="item6">
                 <img src="img/iconbiel.png" class="i6">
                 <p class="j6">
                     Gabriel
