--- a/siglas.html
+++ b/siglas.html
@@ -54,6 +54,14 @@
             da Ação Tec Nep - Tecnologia, Educação, Cidadania e 
             Profissionalização para Pessoas com Necessidades Específicas.
             </p>
+            <p class="l13">CDMI - Coordenação de Apoio Pedagógico aos Cursos Técnicos Integrados ao Ensino Médio.</p>
+            <p class="l14">O CDMI é o bloco do Campus Brasília onde ficam os Coordenadores de todos os cursos do Ensino Médio Integrado. Localiza-se dentro da CGAE. Visite-o em caso de dúvidas sobre o curso ou se precisar adiantar alguma aula.</p>
+            <p class="l15">EMI — Ensino Médio Integrado</p>
+            <p class="l16"> Essa é a sigla do seu curso. Se você for de Informática, a sigla estará acompanhada de INFO ou somente Informática. Se você for de Eventos, ela estará acompanhada com EV.</p>
+            <p class="l17">JIP - Jornada Interdisciplinar de Pesquisa.</p>
+            <p class="l18">A JIP é um evento realizado pelo IFB Campus Brasília que visa promover trabalhos e pesquisas anualmente.</p>
+            <p class="l19">JEPE - Jornada de Ensino, Pesquisa e Extensão.</p>
+            <p class="l20">O JEPE (Jornada de Ensino, Pesquisa e Extensão.) é um evento realizado pelo IFB que visa promover palestras, pesquisas e projetos anualmente por meio de apresentações de banners e seminários.</p>
         </div>
         <img src="img/seta_prabaixo.png" class="setabaixo">
         <img src="img/linha_siglas.png" class="linhasig">
@@ -86,6 +94,14 @@
         O SGA é uma plataforma que os professores acessam para lançar
         notas, presenças, entre outras burocracias sobre e para o estudante,
         que podem ser liberadas aos alunos no Portal do Estudante IFB.</p>
+        <p class="d13">DG - Diretoria Geral.</p>
+        <p class="d14">A Diretoria Geral se constitui no diretor e seu vice-diretor, que atuam no campus do IFB, ela se localiza dentro do bloco administrativo, do lado da recepção.</p>
+        <p class="d15">DEAD - Diretoria de Educação a Distância.</p>
+        <p class="d16">A DEAD é o departamento responsável pela educação à distância do campus e que toma conta do NEAD (Núcleo de Ensino à Distância).</p>
+        <p class="d17">CGRA - Coordenação Geral de Registro Acadêmico.</p>
+        <p class="d18">A CGRA comanda o R.A do campus e fica por trás do processo de matrícula dos alunos.</p>
+        <p class="d19">DREN - Diretoria de Ensino</p>
+        <p class="d20">A DREN é responsável por coordenar atividades de graduação, cursos técnicos, PROEJA e FIC e eles também ficam por conta desses cursos.</p>
         </div>
     </div>
 </body>
