--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <p class="qst">QUEM SOMOS?</p>
         <a href="faq.html"><img src="img/faqq.png" class="faq"></a>
         <p class="faqt">FAQ</p>
-        <a href="mapa.html"><img src="img/mapadocampus.png" class="mapa"></a>
+        <a href="https://youtu.be/KkBJtXY1edM"><img src="img/mapadocampus.png" class="mapa"></a>
         <p class="mapat">MAPA DO CAMPUS</p>
         <a href="siglas.html"><img src="img/cgaee.png" class="siglas"></a>
         <p class="siglast">SIGLAS</p>
-        <a href="calendario.html"><img src="img/calendario.png" class="calen"></a>
+        <a href="arquivo/posgreve.pdf" download="posgreve.pdf"><img src="img/calendario.png" class="calen"></a>
         <p class="calent">CALENDÁRIO</p>
     </div>
 </body> 
